--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
   },
   "dependencies": {
     "@vimeo/player": "^2.16.1",
+    "c": "^1.1.1",
+    "lodash.debounce": "^4.0.8",
     "lodash.throttle": "^4.1.1",
-    "simplelightbox": "^2.7.1"
+    "notiflix": "^3.2.2",
+    "simplelightbox": "^2.9.0"
   }
 }
